--- a/.gitignore
+++ b/.gitignore
@@ -4,66 +4,74 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
 venv/
-env/
 ENV/
-test_env/
+env/
+.env
 
-# Docker
-.dockerignore
+# Local development
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
 
-# Videos (large files)
+# Project specific
 videos/
+*.wav
+temp_audio.wav
 *.mp4
 *.avi
 *.mov
-*.mkv
 
-# Audio files
-*.wav
-*.mp3
-*.flac
+# Docker
+.docker/
+docker-compose.override.yml
 
 # Logs
 *.log
 logs/
+log/
 
 # Database
+*.sqlite3
 *.db
-*.sqlite
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+coverage.xml
+*.cover
+
+# Virtual Environment
+test_env/
+
+# Videos (large files)
+*.mkv
+
+# Audio files
+*.mp3
+*.flac
 
 # IDE
-.vscode/
-.idea/
 *.swp
 *.swo
 
 # OS
-.DS_Store
 Thumbs.db
 
 # Hugging Face cache
 .cache/
 
 # Temporary files
-temp_audio.wav
 *.tmp
 
 # Test files
